[gd_scene load_steps=3 format=3 uid="uid://dxeebrfx88c60"]

[ext_resource type="Script" path="res://scenes/ui/reward_button.gd" id="1_an7lq"]
[ext_resource type="Texture2D" uid="uid://c6136jr4joq1k" path="res://assets/gold.png" id="1_o056h"]

[node name="RewardButton" type="Button"]
custom_minimum_size = Vector2(0, 14)
offset_right = 75.0
offset_bottom = 14.0
script = ExtResource("1_an7lq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="RewardIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
texture = ExtResource("1_o056h")
expand_mode = 1
stretch_mode = 5

[node name="RewardLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "99 gold"
vertical_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
